# tinyRNN-IBL

./: README.md  data_path.json  pyproject.toml
agents/: RNNAgent.py
datasets/: SimpleDataset.py
plotting_experiments/: plotting.py
tutorials/: converting_own_dataset.py  custom_dataset.py  exp_ibl_mouse.py  fitting_generated_data.py  helper_functions.py
utils/: goto_root_dir.py
