[project]
name = "tinyrnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adjusttext>=1.3.0",
    "joblib>=1.5.1",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy==1.26.4",
    "pandas==1.5.3",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
    "statsmodels>=0.14.5",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
